--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
-Walid horri mr.walid.ori@gmail.com
+
+Abel Berhanu <abelberhanu6@gmail.com>
+Robel Amde <robel-ak@gmail.com>
